# YAXF

./: .gitignore  CMakeLists.txt  README.md  YAXF.pro  appveyor.bat  appveyor.yml  build.sh  config.cpp  config.h  config.ui  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.h  settingsmanager.cpp  settingsmanager.h  xqemu-dash.pro
